--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -28,12 +28,22 @@
     </a>
   </li>
   {% endif %}
+  {% if site.email %}
+  <li>
+    <a target="_blank" href="mailto://{{ site.email }}">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-stack-1x fa-inverse">@</i>
+      </span>
+    </a>
+  </li>
+  {% endif %}
   {% if site.zhihu_username %}
   <li>
     <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa  fa-stack-1x fa-inverse">知</i>
+        <i class="fa fa-stack-1x fa-inverse">知</i>
       </span>
     </a>
   </li>
