--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -30,7 +30,7 @@
   {% endif %}
   {% if site.email %}
   <li>
-    <a target="_blank" href="mailto://{{ site.email }}">
+    <a target="_blank" href="mailto:{{ site.email }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-stack-1x fa-inverse">@</i>
