--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -33,7 +33,17 @@
     <a target="_blank" href="mailto:{{ site.email }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-stack-1x fa-inverse">@</i>
+        <i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {% endif %}
+  {% if site.bilibili_uid %}
+  <li>
+    <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_uid }}">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-stack-1x fa-inverse">B</i>
       </span>
     </a>
   </li>
