--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -18,6 +18,16 @@
     </a>
   </li>
   {% endif %}
+  {% if site.wechat_mp %}
+  <li>
+    <a href="{{ site.twitter_username }}">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-weixin fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {% endif %}
   {% if site.twitter_username %}
   <li>
     <a href="https://twitter.com/{{ site.twitter_username }}">
