--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -20,7 +20,7 @@
   {% endif %}
   {% if site.wechat_mp %}
   <li>
-    <a href="{{ site.twitter_username }}">
+    <a href="{{ site.wechat_mp }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-weixin fa-stack-1x fa-inverse"></i>
